# fupzl-lite

./: .gitignore  README.md  pyproject.toml
.github/workflows/: oneshot.yml  probes.yml
apps/litefupzl/: auth_probe.py  cf_probe.py  cookie_refresh_probe.py  main.py  probe_browser.py
src/litefupzl/: exceptions.py  utils.py
src/litefupzl/actions/: read.py
src/litefupzl/browser/: fingerprint.py  navigation.py
src/litefupzl/config/: defaults.py  schema.py
src/litefupzl/discourse/: http_bypass.py  models.py  selectors.py
src/litefupzl/oneshot/: env_loader.py  env_schema.py  github_sync.py  logging.py  models.py  orchestrator.py  redaction.py  session.py  timings.py
tests/: conftest.py  test_cookie_encoding.py  test_env_loader.py  test_lite_shape.py  test_new_topic_quota.py  test_output_redaction.py  test_timings_logging.py  test_topic_pagination.py  test_workflows.py
