[project]
name = "litefupzl"
version = "0.1.0"
description = "Read-only lightweight browser oneshot and probe runner"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.50.0",
    "patchright>=1.59.0,<2.0.0",
    "camoufox>=0.4.11,<0.5.0",
    "pyvirtualdisplay>=3.0",
    "curl_cffi>=0.10.0",
    "beautifulsoup4>=4.14.0",
    "pyyaml>=6.0",
    "pydantic>=2.10.0",
    "loguru>=0.7.0",
    "click>=8.1.0",
    "pynacl>=1.5.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pyyaml>=6.0",
]

[project.scripts]
litefupzl = "litefupzl.oneshot.orchestrator:run_oneshot_sync"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
